Use loop to array